# faenet

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-docs.txt
configs-faenet/: is2re.yaml  qm7x.yaml  qm9.yaml  s2ef.yaml
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: classtemplate.rst
docs/source/api/: base_model.rst  embedding.rst  eval.rst  fa_forward.rst  force_decoder.rst  frame_averaging.rst  index.rst  model.rst  transforms.rst  utils.rst
docs/source/api/faenet/: index.rst
docs/source/api/faenet/base_model/: index.rst
docs/source/api/faenet/embedding/: index.rst
docs/source/api/faenet/eval/: index.rst
docs/source/api/faenet/fa_forward/: index.rst
docs/source/api/faenet/force_decoder/: index.rst
docs/source/api/faenet/frame_averaging/: index.rst
docs/source/api/faenet/model/: index.rst
docs/source/api/faenet/transforms/: index.rst
docs/source/api/faenet/utils/: index.rst
docs/source/autoapi/: index.rst
docs/source/autoapi/faenet/base_model/: index.rst
docs/source/autoapi/faenet/embedding/: index.rst
docs/source/autoapi/faenet/frame_averaging/: index.rst
docs/source/autoapi/faenet/model/: index.rst
docs/source/autoapi/faenet/transforms/: index.rst
docs/source/getting-started/: index.rst
docs/source/install/: index.rst  install.rst
docs/source/tutorials/: index.rst  predictions.rst
examples/data/: is2re_bs3.pt  is2re_bs8.pt
faenet/: __init__.py  base_model.py  embedding.py  eval.py  fa_forward.py  force_decoder.py  frame_averaging.py  layers.py  loss.py  model.py  transforms.py  utils.py
tests/: t_utils.py  test_data_sample.py  test_fa_funcs.py  test_fa_transforms.py  test_inference.py  test_model.py  test_model_symmetries.py
(+1 files in other folders)
