[tool.poetry]
name = "faenet"
version = "0.1.0"
description = ""
authors = ["Victor Schmidt <vsch@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^1.12"
mendeleev = "^0.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
