[tool.poetry]
name = "faenet"
version = "0.1.3"
description = "PyTorch implementation for FAENet from 'FAENet: Frame Averaging Equivariant GNN for Materials Modeling'"
authors = [
    "Victor Schmidt <vsch@pm.me>",
    "Alexandre Duval <alexandre.duval@mila.quebec>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.12"
mendeleev = ">=0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ipython = "^8.10.0"
sphinx = "5.3.0"
myst-parser = "0.18.1"
sphinx_rtd_theme = "1.1.1"
sphinx-math-dollar = "1.2.1"
sphinx-autoapi = "^2.0.0"

[tool.poetry.group.extras.dependencies]
torch-sparse = "^0.6.16"
torch-scatter = "^2.1.0"
torch-geometric = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
